Debugged no default_provider again

--- a/OpenLCA/Ecoinvent_SA_OpenLCA_v1_2.ipynb
+++ b/OpenLCA/Ecoinvent_SA_OpenLCA_v1_2.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<olca.ipc.Client at 0x7fea1b68faf0>"
+       "<olca.ipc.Client at 0x7fd6e9021b80>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "code_folding": [
      0
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4  3c7c0ba3-acd4-3e19-be88-8fff9dc87788       SE  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,9 +241,10 @@
     "                print('input flow: '+test_input[j].default_provider.name+test_input[j].default_provider.location)\n",
     "\n",
     "            else:\n",
-    "                test_input[j].default_provider = 'No Default Provider'\n",
-    "                SArange_key = test_input[j].default_provider+' | '+str(start_point)+' | '+str(end_point)+' | '+str(step_size)\n",
-    "                print('input flow: '+test_input[j].default_provider)\n",
+    "                if test_input[j].default_provider = 'No Default Provider':\n",
+    "                    test_input[j].default_provider = None # recover former modification\n",
+    "                SArange_key = test_input[j].flow.name+' | '+test_input[j].flow.id+' | '+str(start_point)+' | '+str(end_point)+' | '+str(step_size)\n",
+    "                print('input flow: '+test_input[j].flow.name+' | '+test_input[j].flow.id)\n",
     "\n",
     "            if SArange_key not in SA_dict[process_key].keys():\n",
     "                SA_dict[process_key][SArange_key] = {}\n",
@@ -295,7 +296,7 @@
     "                        if test_input[j].default_provider is not None:\n",
     "                            result_list_cache.append([test_input[j].default_provider.name+test_input[j].default_provider.location, GWP100a_value, test_amount_range[k]/initial_value])\n",
     "                        else:\n",
-    "                            result_list_cache.append([test_input[j].default_provider, GWP100a_value, test_amount_range[k]/initial_value])\n",
+    "                            result_list_cache.append([test_input[j].flow.name+test_input[j].flow.id, GWP100a_value, test_amount_range[k]/initial_value])\n",
     "                        with open(cached_path, 'w', newline=\"\") as f:\n",
     "                            write = csv.writer(f, delimiter=\";\")\n",
     "                            write.writerow([\"Process name: \", search_process_name+\" | \"+search_process_location])\n",
